# BTC-PM

./: .gitignore  README.md  chanlun.service  deploy.sh  nginx.conf
artifacts/: polymarket_planAB_fusions.html  polymarket_planB_variations.html  polymarket_planB_variations_v2.html  polymarket_ui_proposals.html  (+1 more)
backend/: .env.example  debug_ws.py  desc.txt  mtf_results.txt  p10_backtest.py  p10_backtest2.py  p10_grid.txt  p10_grid_v2.txt  package-lock.json  pyproject.toml  test_oracle_ws.py
backend/app/: config.py  main.py  main.py.bak
backend/app/api/: backtest.py  chanlun.py  cron.py  polymarket.py  ws.py
backend/app/clients/: binance_client.py  binance_client.py.bak  market_client.py  polymarket_client.py  polymarket_ws.py
backend/app/engines/: __init__.py  bi.py  chanlun_engine.py  divergence.py  prediction.py  scoring.py  trend.py  zhongshu.py
backend/app/models/: __init__.py  base.py  prediction.py
backend/app/schemas/: backtest.py  chanlun.py  polymarket.py
backend/app/scripts/: analyze_backtest.py  analyze_mtf.py  p10_300d_backtest.py  p10_alpha_miner.py  p10_factor_isolation.py  p10_mtf_backtest.py  p10_pm_grid_search.py  run_backtest.py  run_mtf_backtest.py
backend/app/services/: __init__.py  backtest_service.py  chanlun_service.py  oracle_service.py  polymarket_service.py  polymarket_service.py.bak
backend/app/utils/: constants.py
backend/tests/: conftest.py  test_api.py  test_chanpy_compare.py  test_clients.py  test_engine_integration.py  test_engines.py  test_phase2.py  test_price_compare.py  test_services.py
deploy/: chanlun.service
(+93 files in other folders)
