[project]
name = "btc-chanlun-backend"
version = "1.0.0"
description = "BTC Chanlun Analyzer - Python FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pandas>=3.0.0",
    "ta-lib>=0.6.0",
    "httpx>=0.28.0",
    "apscheduler>=3.11.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
